--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "node": "10.15.1"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon -e * ./bin/www",
-    "ui": "browser-sync start --proxy localhost:8000 --files=**/*  --ignore=node_modules --reload-delay 10000 --no-ui --no-inject-changes"
+    "start": "node app.js",
+    "dev": "nodemon -e * app.js",
+    "ui": "browser-sync start --proxy localhost:8000 --files=**/*  --ignore=node_modules --reload-delay 1000 --no-ui --no-inject-changes"
   },
   "keywords": [],
   "devDependencies": {
@@ -23,17 +23,16 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "acorn": "^6.4.2",
-    "body-parser": "^1.19.0",
+    "accesscontrol": "^2.2.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "googleapis": "^61.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.13",
-    "passport": "^0.4.1",
-    "passport-auth0": "^1.3.3",
     "pug": "^3.0.0",
     "readline": "^1.3.0"
   }
