--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "node app.js",
+    "debug": "set DEBUG=express:* & node app.js",
     "dev": "nodemon -e * app.js",
     "ui": "browser-sync start --proxy localhost:8000 --files=**/*  --ignore=node_modules --reload-delay 1000 --no-ui --no-inject-changes"
   },
@@ -25,6 +26,7 @@
   "dependencies": {
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.0",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
