--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "express": "^4.17.1",
     "googleapis": "^61.0.0",
     "http-errors": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.8.0",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.13",
     "pug": "^3.0.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
