--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "set DEBUG=express:* & node ./bin/www",
-    "dev": "nodemon -e * ./bin/www",
+    "debug": "set DEBUG=express:* & node node app.js",
+    "dev": "nodemon -e * node app.js",
     "ui": "browser-sync start --proxy localhost:10000 --files=**/*  --ignore=node_modules --reload-delay 1000 --no-ui --no-notify --no-inject-changes"
   },
   "keywords": [],
