--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "license": "MIT",
   "main": "app.js",
   "engines": {
-    "npm": "6.13.4",
-    "node": "10.15.1"
+    "npm": "10.8.2",
+    "node": "20.16.0"
   },
   "scripts": {
     "start": "node ./bin/www",
     "debug": "set DEBUG=express:* & node ./bin/www",
+    "dev": "nodemon -e * ./bin/www",
     "ui": "browser-sync start --proxy localhost:10000 --files=**/*  --ignore=node_modules --reload-delay 1000 --no-ui --no-notify --no-inject-changes"
   },
   "keywords": [],
   "devDependencies": {
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^3.0.2",
     "eslint": "^7.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.1",
@@ -31,13 +32,13 @@
     "express": "^4.17.1",
     "googleapis": "^61.0.0",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.13",
     "pug": "^3.0.0",
-    "readline": "^1.3.0",
-    "jsonwebtoken": "^8.5.1"
+    "readline": "^1.3.0"
   }
 }
