--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "20.16.0"
   },
   "scripts": {
-    "start": "node app.js host=0.0.0.0",
+    "start": "node app.js",
     "debug": "set DEBUG=express:* & node ./bin/www",
     "dev": "nodemon -e * ./bin/www",
     "ui": "browser-sync start --proxy localhost:10000 --files=**/*  --ignore=node_modules --reload-delay 1000 --no-ui --no-notify --no-inject-changes"
