--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "main": "app.js",
   "engines": {
-    "npm": "10.8.2",
-    "node": "20.16.0"
+    "npm": ">=10.8.2",
+    "node": ">=20.16.0"
   },
   "scripts": {
     "start": "node app.js",
